Apply z-index to modal-background to fix bug with navbar showing

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -121,6 +121,7 @@
   overflow: auto;
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.8);
+  z-index: 3;
 }
 
 .signlog-modal-form {
